--- a/public/index.html
+++ b/public/index.html
@@ -1,94 +1,41 @@
 <html>
   <head>
-    <title>Welcome to Feathers</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      html, body {
-        font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
-        font-weight: 400;
-        font-size: 16px;
-        color: #333;
-      }
-
-      .center-text {
-        text-align: center;
-      }
-
-      main {
-        margin-top: 100px;
-        padding: 20px;
-      }
-
-      img.logo {
-        display: block;
-        margin: 0 auto;
-        max-width: 100%;
-        margin-bottom: 30px;
-      }
-
-      h2 {
-        font-size: 2em;
-        font-weight: 100;
-      }
-
-      footer {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        padding: 20px;
-      }
-
-      footer p {
-        font-weight: 300;
-        font-size: 1.0em;
-      }
-
-      a {
-        color: #31D8A0;
-        text-decoration: none;
-      }
-
-      a:hover,
-      a:focus {
-        color: #31D8A0;
-      }
-    </style>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+    <title>Feathers Chat</title>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.1.0/public/base.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.1.0/public/chat.css">
   </head>
   <body>
-    <main class="container">
-      <h2 class="center-text">A minimalist real-time framework for tomorrow's apps.</h2>
-      
-      <footer>
-        <p class="center-text">For more information on Feathers see <a href="http://docs.feathersjs.com" alt="Feathers Documentation" target="blank">docs.feathersjs.com</a>.</p>
-      </footer>
+    <main class="home container">
+      <div class="row">
+        <div class="col-12 col-8-tablet push-2-tablet text-center">
+          <img class="logo center-item"
+            src="http://feathersjs.com/img/feathers-logo-wide.png"
+            alt="Feathers Logo">
+          <h3 class="title">emp[ ]y Chat House</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 push-4-tablet col-4-tablet">
+          <div class="row">
+            <div class="col-12">
+              <a href="login.html" class="button button-primary block login">
+                Login
+              </a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <a href="signup.html" class="button button-primary block signup">
+                Signup
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
-    <script src="//unpkg.com/feathers-client@^1.0.0/dist/feathers.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-  // Establish a Socket.io connection to the local server
-  var socket = io();
-    // Create a client side Feathers application that uses the socket
-    // for connecting to services
-    var app = feathers();
-      app.configure(feathers.socketio(socket));
-        // Retrieve a connection to the /messages service on the server
-        // This service will use websockets for all communication
-        var messages = app.service('messages');
-
-	  // Listen for when a new message has been created
-	  messages.on('created', function(message) {
-	      console.log('Someone created a message', message);
-	    });
-
-  // Create a new message on the service
-  messages.create({ text: 'Hello from websocket!' });
-    </script>
   </body>
 </html>
